--- a/package.json
+++ b/package.json
@@ -18,19 +18,23 @@
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-slideshow-image": "^4.2.1",
     "swr": "^2.2.0",
     "typescript": "5.0.2"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@types/jsonwebtoken": "^9.0.2"
   }
 }
