--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.14",
     "@mui/x-data-grid": "^6.10.2",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.15.10",
     "@types/react": "18.0.29",
